// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.server.tq.sweep;

option go_package = "go.chromium.org/luci/server/tq/internal/sweep/sweeppb";

message SweepTask {
  // Partition specifies the range of keys to scan as [Low..High).
  //
  // This is the primary payload of this message. The rest of the fields is used
  // only for monitoring/debugging purposes.
  //
  // It is a string of the form "<hex-low>_<hex-high>".
  string partition = 1;

  // Shards is total number of shards used when this task was generated.
  //
  // Used FYI only in logs.
  int32 shard_count = 2;

  // Shard number in the range of [0 .. Shards).
  //
  // Used FYI only in logs.
  int32 shard_index = 3;

  // Level counts recursion level for monitoring/debugging purposes.
  //
  // The root sweeper triggers tasks at level=0. If there is a big backlog,
  // level=0 task will offload some work to level=1 tasks. level > 1 should not
  // normally happen and indicates either a bug or a very overloaded system.
  //
  // level > 2 won't be executed at all.
  int32 level = 4;
}
